Added text scramble during animation

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 				easing: "in",
 				interval: 500,
 				leaveNoTrace: false,
+				scramble: true,
 				timeout: 500
 			});
 			$('#numbers').typimate({
@@ -32,6 +33,7 @@
 				easing: "out",
 				interval: 300,
 				leaveNoTrace: true,
+				scramble: true,
 				timeout: 1000
 			});
 			$('#chars').typimate({
